try fixing not showing pics

--- a/gaproject2/src/Components/Character/Character.css
+++ b/gaproject2/src/Components/Character/Character.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&display=swap");
 .personCard {
   background-image: url("https://res.cloudinary.com/headincloud/image/upload/v1595635096/owl_e41ior.png");
-  opacity: 78%;
+  /* opacity: 78%; */
   background-size: cover;
   background-position: center;
   height: 100vh;
